# VARL

./: .buildinfo  README.md  genindex.html  index.html  objects.inv  search.html  searchindex.js  setup.cfg
_sources/: index.rst.txt
_static/: documentation_options.js
docs/source/: conf.py  index.rst
docs/source/_static/: example.yml
requirements/: base.txt  dev.txt  develop.txt
schema/: varl-schema.json
schema/definitions/: assessment-methodology-schema.json  assessment_scope-schema.json  assumptions-schema.json
src/: schema.json
