##########################
# Setup.py Configuration #
##########################
[metadata]
name = VARL
version = 1.0.0-dev
description = A Vulnerability Assessment Reporting Language (VARL) module is a software tool that enables organizations to assess and report on the security vulnerabilities of their systems.
long_description = file: README.md
long_description_content_type = text/markdown

# URLs associated with the project
url = https://github.com/BOHICA-Labs/VARL
download_url = https://github.com/BOHICA-Labs/VARL/releases
project_urls =
    Bug Tracker = https://github.com/BOHICA-Labs/VARL/issues
    Source Code = https://github.com/BOHICA-Labs/VARL

# Author information
author = Joshua Magady
author_email = josh.magady@gmail.com
maintainer = Joshua Magady
maintainer_email = josh.magady@gmail.com

# License Information
license = MIT
license_files =
    LICENSE

# Search tags
classifiers =
    Development Status :: 1 - Planning
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Framework :: Pytest
    Framework :: tox
    Framework :: Sphinx
    Programming Language :: Python
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3 :: Only
    # TODO add your topics from the Trove controlled vocabulary (see https://pypi.org/classifiers)
keywords =
    snekpack
    cookiecutter
    # TODO add your own free-text keywords

[options]
# Random options
install_requires = file: requirements/base.txt
zip_safe = false
include_package_data = True
python_requires = >=3.8

# Where is my code
packages = find:
package_dir =
    = src

[options.extras_require]
tests = file: requirements/test.txt
docs = file: requirements/docs.txt
dev = file: requirements/dev.txt


[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    VARL = VARL.cli:main

######################
# Doc8 Configuration #
# (doc8.ini)         #
######################
[doc8]
max-line-length = 120

##########################
# Coverage Configuration #
# (.coveragerc)          #
##########################
[coverage:run]
branch = True
source = VARL
omit =
    tests/*
    docs/*

[coverage:paths]
source =
    src/VARL
    .tox/*/lib/python*/site-packages/VARL

[coverage:report]
show_missing = True
exclude_lines =
    pragma: no cover
    raise NotImplementedError
    if __name__ == __main__:
    if TYPE_CHECKING:
    def __str__
    def __repr__

##########################
# Darglint Configuration #
##########################
[darglint]
docstring_style = sphinx
strictness = short

#########################
# Flake8 Configuration  #
# (.flake8)             #
#########################
[flake8]
ignore =
    S301,
    S403,
    S404,
    S603,
    W503,
    E203
exclude =
    .tox,
    .git,
    __pycache__,
    docs/source/conf.py,
    build,
    dist,
    tests/fixtures/*,
    *.pyc,
    *.egg-info,
    .cache,
    .eggs,
    data
max-line-length = 120
max-complexity = 20
import-order-style = pycharm
application-import-names =
    VARL
    tests
